laid out header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
+@import "fonts";
+@import "header";
 
-body{
-  background-color: aquamarine;
-  color: red;
+* {
+  //font-family: 'MuseoModerno', cursive;
+  color: white;
 }
-
