--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -56,6 +56,11 @@ button{
   border: none;
 }
 
+button:hover{
+  background: blue;
+  transition: background-color 0.5s;
+}
+
 
   .header_promo{
   margin-top: 91px;
@@ -113,6 +118,10 @@ button{
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+  }
+
+  button:hover{
+    background: blue;
   }
 
   p{
